# agentcli

./: .gitignore  PLAN.md  README.md  pyproject.toml
.agents/: AGENTS.md
.agents/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/agentcli/: __init__.py  _agents.py  _app.py  _context.py  _errors.py  _help.py  _output.py  _parser.py  _schema.py  _types.py  _wizard.py  prompt.py
src/humancli/: __init__.py  _app.py  _parser.py  testing.py
tests/: test_agentcli.py  test_humancli.py
