[project]
name = "agentcli"
version = "0.1.0"
description = "Python CLIs for agents and humans"
readme = "README.md"
authors = [
    { name = "Yaser Martinez Palenzuela", email = "yaser.martinez@gmail.com" }
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "docstring-parser>=0.16",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
pydantic = ["pydantic>=2.0"]
yaml = ["pyyaml>=6.0"]
mcp = ["mcp>=1.0"]
all = ["agentcli[rich,pydantic,yaml,mcp]"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
