[project]
name = "humancli"
version = "0.1.0"
description = "Python CLIs for agents and humans"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Yaser Martinez Palenzuela", email = "yaser.martinez@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["cli", "agent", "llm", "ai", "command-line"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "docstring-parser>=0.16",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
pydantic = ["pydantic>=2.0"]
yaml = ["pyyaml>=6.0"]
mcp = ["mcp>=1.0"]
all = ["humancli[rich,pydantic,yaml,mcp]"]
dev = ["ruff>=0.11"]

[project.urls]
Repository = "https://github.com/elyase/agentcli"
Issues = "https://github.com/elyase/agentcli/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
